src/test/resources/mutation/error/insertNoRecordSet/schema.graphqls
input EndreInput {
  id: ID!
}

type Mutation {
  registrerPersonInput(input: EndreInput!): ID! @mutationType(typeName: INSERT)
}
